udpate coverage config
also update checkstyle config. we are waiting for the next release 8.36 that will support Java Switch Expressions