@@ -110,6 +110,7 @@ test {
 }
 
 task integrationTest(type: Test) {
+    jvmArgs(['--enable-preview'])
     description = "Execute integration tests."
     group = "verification"
     include "**/*IT*", "**/*IntTest*"
@@ -147,7 +148,8 @@ jacocoTestCoverageVerification {
             limit {
                 counter = 'LINE'
                 value = 'COVEREDRATIO'
-                minimum = 0.70
+                // TODO: in the future the following value should become at least 0.80
+                minimum = 0.76
             }
         }
     }
@@ -355,7 +357,8 @@ if (project.hasProperty("nodeInstall")) {
 
 // Command to execute the JavaDoc checkstyle verification ./gradlew checkstyleMain
 checkstyle {
-    toolVersion "8.10"
+    // TODO: checkstyle 8.36 will finally support the new Java switch expressions, it should be released in the end of August
+    toolVersion "8.35"
     configFile file("${rootDir}/checkstyle.xml")
     checkstyleTest.enabled = false
     maxErrors = 0
